feat:portfolio add

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://aayush105.github.io/portfolio-v2",
-  "name": "3d-portfolio-website",
+  "homepage": "https://aayush105.github.io/",
+  "name": "Aayush's-portfolio-website",
   "version": "0.1.1",
   "private": true,
   "dependencies": {
