--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.20",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.0.5",
     "maath": "^0.10.7",
+    "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -27,6 +29,7 @@
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.8",
+    "tailwindcss": "^3.4.13",
     "three": "^0.161.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
